[package]
name = "kinesis-reader-rs"
version = "0.1.0"
authors = ["Cyril Cheneson <cyril.cheneson@photobox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.43.0"
rusoto_credential = "0.43.0"
rusoto_kinesis = "0.43.0"
tokio = "0.2.21"
serde_json = "1.0.64"
#serde = "1.0.124"
futures = "0.3.13"
anyhow = "1.0"
